# tencentos-mcp-server

./: .gitignore  Containerfile  LICENSE  README.md  VALIDATION-REPORT.md  mcp-config-example.json  pyproject.toml  test_validate.py
src/tencentos_mcp_server/: __init__.py  __main__.py  audit.py  best_practices.py  config.py  executor.py  models.py  sanitize.py  server.py
src/tencentos_mcp_server/tools/: __init__.py  compliance.py  diagnostics.py  logs.py  network.py  patch_history.py  patch_impact.py  processes.py  services.py  storage.py  system_info.py  system_tuning.py
