[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tencentos-mcp-server"
version = "0.1.0"
description = "MCP Server for TencentOS Server — system telemetry, diagnostics, and recommendations"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "fastmcp>=2.14.4,<3",
    "asyncssh[bcrypt]>=2.22.0",
    "pydantic>=2.12.0",
]

[project.scripts]
tencentos-mcp-server = "tencentos_mcp_server.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tencentos_mcp_server"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
